# Vendetta-Reborn

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  ClSurPerso.cls  ClsAffApparence.cls  ClsAffBatiment.cls  ClsAffBouton.cls  ClsAffDecors.cls  ClsAffDegats.cls  ClsAffEffet.cls  ClsAffFenetre.cls  ClsAffObjets.cls  ClsAffPerso.cls  ClsAffRessources.cls  ClsAffSouris.cls  ClsAffSprite.cls  ClsAffTemps.cls  ClsAffTerrain.cls  ClsAffTresors.cls  ClsComFief.cls  ClsComMessage.cls  ClsComMessages.cls  ClsComPerso.cls  ClsComReseau.cls  ClsComReseau2.cls  ClsCommande.cls  ClsFicINI.cls  ClsIntBouton.cls  ClsIntConfirmation.cls  ClsIntFenetre.cls  ClsIntMessage.cls  ClsIntTouches.cls  ClsInterface.cls  ClsJeu.cls  ClsJeuBatiment.cls  ClsJeuCartes.cls  ClsJeuCommentaires.cls  ClsJeuCompetences.cls  ClsJeuDecors.cls  (+74 more)
Cartes/: Comment creer une carte.txt
Donnees/: Apparences.ini  Boutons.ini  Cartes.ini  Combat.ini  Documents.ini  Ecran.ini  Fenetres.ini  Interface1024.ini  Interface1024_J1.ini  Interface1024_J2.ini  Interface1280.ini  Interface1280_J1.ini  Interface1280_J2.ini  Interface1600.ini  Interface1600_J1.ini  Interface1600_J2.ini  Interface640.ini  Interface800.ini  Jeu.ini  Langues.ini  Musiques.ini  NomsF.ini  NomsM.ini  Parametres_Batiments.ini  Parametres_CompetencesObjets.ini  Parametres_Decors.ini  Parametres_Effets.ini  Parametres_Objets.ini  Parametres_Persos.ini  Parametres_Peuples.ini  Parametres_Races.ini  Parametres_Resistances.ini  Parametres_Ressources.ini  Partie.ini  Reseau.ini  SavPerso.ini  Sons.ini  Souris.ini  Temps.ini  Touches.ini  (+1 more)
IAScripts/: Test.txt
IAs/: Alchimiste.ia  Arbaletrier offensif.ia  Archer.ia  Armurier.ia  Artilleur.ia  Artisan.ia  Assassin offensif.ia  (+44 more)
(+257 files in other folders)
